# placement-policy-vivarium

./: Cargo.toml
additional_devices/: cluster-old-hdd.csv
config/: input.toml
plots/: policy_movement.py  zipf_batch.py
src/: :w  ]  config.rs  main.rs  result_csv.rs
src/application/: mod.rs  zipf.rs
src/cache/: fifo.rs  lru.rs  mod.rs  noop.rs
src/placement/: example.rs  mod.rs  noop.rs
src/storage_stack/: devices.rs  mod.rs
test-access/: Cargo.toml
test-access/src/: main.rs
