[package]
name = "policy-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = { version= "1.0.188", features= ["serde_derive"] }
thiserror = "1.0.48"
toml = "0.8.0"
zipf = "7.0.1"
