[package]
name = "policy-simulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
rand = "0.8.5"
serde = { version= "1.0.188", features= ["serde_derive"] }
strum = { version = "0.25.0", features = ["derive"] }
thiserror = "1.0.48"
toml = "0.8.0"
zipf = "7.0.1"
